[metadata]
name = pycompose
version = 1.0
description = A simple way to inject composition through inheritance syntax.
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:

[options.packages.find]
where=src