[metadata]
name = pycompose
version = 1.1
description = A simple way to inject composition through inheritance syntax.
long_description = file: README.md
long_description_content_type = text/markdown
author = Tim Fischer
author_email = tim.fischer98@hotmail.com
url = https://github.com/tim-fi/pycompose
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:

[options.packages.find]
where=src