[metadata]
name = pycompose
version = attr: pycompose.__version__
description = A simple way to inject composition through inheritance syntax.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Tim Fischer
author_email = me@timfi.dev
url = https://github.com/timfi/pycompose
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    Topic :: Software Development :: Code Generators
    Typing :: Typed

[options]
zip_safe = False
include_package_data = True
py_modules = pycompose

[bdist_wheel]
universal = 1

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
files=pycompose.py,tests.py
ignore_missing_imports=true

[tool:pytest]
testpaths=tests.py

[pydocstyle]
match_dir=pycompose
match=pycompose.py